crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_json_with_namespace.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 287
expression: value
---
{
  "id": "checkout-plan",
  "image": "ghcr.io/acme/checkout:next",
  "name": "checkout-session",
  "planned_resources": [
    {
      "kind": "Deployment",
      "name": "checkout-plan-workload",
      "namespace": "staging"
    },
    {
      "kind": "HTTPRoute",
      "name": "checkout-plan-route",
      "namespace": "staging"
    },
    {
      "kind": "Service",
      "name": "checkout-plan-service",
      "namespace": "staging"
    }
  ],
  "policy": {
    "allowed_operations": [
      "inspect",
      "plan",
      "prepare",
      "route",
      "verify",
      "cleanup"
    ]
  },
  "route_selector": {
    "kind": "header",
    "name": "x-kply-session",
    "value": "checkout-plan"
  },
  "status": "planned",
  "ttl": null,
  "workload": {
    "kind": "Deployment",
    "name": "checkout-api",
    "namespace": "staging"
  }
}
