crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_json_with_warnings_and_risks.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "id": "checkout-db-plan",
  "image": "postgres:16",
  "name": "checkout-db-session",
  "planned_annotations": [
    {
      "key": "kply.dev/image",
      "value": "postgres:16"
    },
    {
      "key": "kply.dev/route-strategy",
      "value": "preview"
    },
    {
      "key": "kply.dev/workload",
      "value": "shop/Deployment/checkout-postgres"
    }
  ],
  "planned_checks": [
    {
      "name": "image_pull",
      "target": "postgres:16"
    },
    {
      "name": "route_ready",
      "target": "shop/checkout-db-plan-service"
    },
    {
      "name": "service_endpoints",
      "target": "shop/checkout-db-plan-service"
    },
    {
      "name": "workload_ready",
      "target": "shop/Deployment/checkout-postgres"
    }
  ],
  "planned_cleanup_steps": [
    {
      "action": "delete_service",
      "target": "shop/Service/checkout-db-plan-service"
    },
    {
      "action": "delete_workload",
      "target": "shop/Deployment/checkout-db-plan-workload"
    }
  ],
  "planned_labels": [
    {
      "key": "kply.dev/app",
      "value": "checkout-db"
    },
    {
      "key": "kply.dev/managed-by",
      "value": "kply"
    },
    {
      "key": "kply.dev/session-id",
      "value": "checkout-db-plan"
    },
    {
      "key": "kply.dev/session-name",
      "value": "checkout-db-session"
    }
  ],
  "planned_resources": [
    {
      "kind": "Deployment",
      "name": "checkout-db-plan-workload",
      "namespace": "shop"
    },
    {
      "kind": "Service",
      "name": "checkout-db-plan-service",
      "namespace": "shop"
    }
  ],
  "policy": {
    "allowed_operations": [
      "inspect",
      "plan",
      "prepare",
      "route",
      "verify",
      "cleanup"
    ]
  },
  "required_permissions": [
    {
      "api_group": "",
      "resource": "pods",
      "verbs": [
        "get",
        "list",
        "watch"
      ]
    },
    {
      "api_group": "",
      "resource": "services",
      "verbs": [
        "create",
        "delete",
        "get",
        "patch"
      ]
    },
    {
      "api_group": "apps",
      "resource": "deployments",
      "verbs": [
        "create",
        "delete",
        "get",
        "patch"
      ]
    }
  ],
  "risk_notes": [
    {
      "category": "database",
      "reason": "database_reference_requires_manual_review",
      "severity": "warning",
      "target": "app:checkout-db"
    }
  ],
  "route_selector": null,
  "status": "planned",
  "ttl": null,
  "unsupported_feature_warnings": [
    {
      "feature": "edge_route_validation",
      "reason": "preview_service_skips_edge_route_validation"
    }
  ],
  "workload": {
    "kind": "Deployment",
    "name": "checkout-postgres",
    "namespace": "shop"
  }
}
