crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_text.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 163
expression: output
---
kply session plan checkout
id: checkout-plan
name: checkout-session
workload: shop/Deployment/checkout-api
image: ghcr.io/acme/checkout:next
planned_resources: 3
  resource: shop/Deployment/checkout-plan-workload
  resource: shop/HTTPRoute/checkout-plan-route
  resource: shop/Service/checkout-plan-service
planned_labels: 4
  label: kply.dev/app=checkout
  label: kply.dev/managed-by=kply
  label: kply.dev/session-id=checkout-plan
  label: kply.dev/session-name=checkout-session
planned_annotations: 3
  annotation: kply.dev/image=ghcr.io/acme/checkout:next
  annotation: kply.dev/route-strategy=header
  annotation: kply.dev/workload=shop/Deployment/checkout-api
route_selector: header:x-kply-session=checkout-plan
policy_operations: 6
status: planned
