crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_text_with_image.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 211
expression: output
---
kply session plan checkout
id: checkout-plan
name: checkout-session
workload: shop/Deployment/checkout-api
image: ghcr.io/kubeply/checkout:v2
planned_resources: 3
  resource: shop/Deployment/checkout-plan-workload
  resource: shop/HTTPRoute/checkout-plan-route
  resource: shop/Service/checkout-plan-service
planned_labels: 4
  label: kply.dev/app=checkout
  label: kply.dev/managed-by=kply
  label: kply.dev/session-id=checkout-plan
  label: kply.dev/session-name=checkout-session
planned_annotations: 3
  annotation: kply.dev/image=ghcr.io/kubeply/checkout:v2
  annotation: kply.dev/route-strategy=header
  annotation: kply.dev/workload=shop/Deployment/checkout-api
planned_checks: 4
  check: image_pull -> ghcr.io/kubeply/checkout:v2
  check: route_ready -> header
  check: service_endpoints -> shop/checkout-plan-service
  check: workload_ready -> shop/Deployment/checkout-api
planned_cleanup_steps: 3
  cleanup: delete_route -> shop/HTTPRoute/checkout-plan-route
  cleanup: delete_service -> shop/Service/checkout-plan-service
  cleanup: delete_workload -> shop/Deployment/checkout-plan-workload
route_selector: header:x-kply-session=checkout-plan
policy_operations: 6
status: planned
