crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_text_with_image_and_namespace.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 413
expression: output
---
kply session plan checkout
id: checkout-plan
name: checkout-session
workload: staging/Deployment/checkout-api
image: ghcr.io/kubeply/checkout:v2
route_selector: header:x-kply-session=checkout-plan
policy_operations: 6
status: planned
