crates/kply-cli/tests/snapshots/cli__session_plan_placeholder_text_with_namespace.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 261
expression: output
---
kply session plan checkout
id: checkout-plan
name: checkout-session
workload: staging/Deployment/checkout-api
image: ghcr.io/acme/checkout:next
planned_resources: 3
  resource: staging/Deployment/checkout-plan-workload
  resource: staging/HTTPRoute/checkout-plan-route
  resource: staging/Service/checkout-plan-service
planned_labels: 4
  label: kply.dev/app=checkout
  label: kply.dev/managed-by=kply
  label: kply.dev/session-id=checkout-plan
  label: kply.dev/session-name=checkout-session
planned_annotations: 3
  annotation: kply.dev/image=ghcr.io/acme/checkout:next
  annotation: kply.dev/route-strategy=header
  annotation: kply.dev/workload=staging/Deployment/checkout-api
planned_checks: 4
  check: image_pull -> ghcr.io/acme/checkout:next
  check: route_ready -> header
  check: service_endpoints -> staging/checkout-plan-service
  check: workload_ready -> staging/Deployment/checkout-api
planned_cleanup_steps: 3
  cleanup: delete_route -> staging/HTTPRoute/checkout-plan-route
  cleanup: delete_service -> staging/Service/checkout-plan-service
  cleanup: delete_workload -> staging/Deployment/checkout-plan-workload
required_permissions: 4
  permission: core/pods [get,list,watch]
  permission: core/services [create,delete,get]
  permission: apps/deployments [create,delete,get,patch]
  permission: gateway.networking.k8s.io/httproutes [create,delete,get]
unsupported_feature_warnings: 0
route_selector: header:x-kply-session=checkout-plan
policy_operations: 6
status: planned
